<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.MainActivity">

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/color_primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/user_photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_image_256"
                android:scaleType="centerCrop"
                android:src="@drawable/images"
                android:fitsSystemWindows="false"/>
            
            <android.support.v7.widget.Toolbar
                android:theme="@style/AppTheme.PopupOverlay"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:titleTextColor="@color/color_white"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/user_info_wrapper"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_larger_110"
                android:background="@color/gray"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_normal_16"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/color_white"
                        android:text="@string/top_rating_amount"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/font_small_12"
                        android:text="@string/top_rating"/>

                </LinearLayout>

                <View
                    android:layout_width="@dimen/size_tiny_2"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medial_24"
                    android:layout_marginBottom="@dimen/spacing_medial_24"
                    android:background="@color/gray_light"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/spacing_normal_16"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/color_white"
                        android:text="@string/top_code_amount"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/font_small_12"
                        android:text="@string/top_code"/>

                </LinearLayout>

                <View
                    android:layout_width="@dimen/size_tiny_2"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medial_24"
                    android:layout_marginBottom="@dimen/spacing_medial_24"
                    android:background="@color/gray_light"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_normal_16"
                    android:layout_marginRight="@dimen/spacing_normal_16"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/color_white"
                        android:text="@string/top_projects_amount"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/font_small_12"
                        android:text="@string/top_projects"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:layout_marginBottom="@dimen/spacing_small_8">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_call_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/spacing_medial_24"
                    android:layout_marginRight="@dimen/spacing_normal_16">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/phone_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:hint="@string/et.hint.phone"
                            android:text="@string/et.text.phone"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_light"
                            android:enabled="false"
                            android:focusable="false"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:id="@+id/phone_btn"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_tiny_2"
                android:background="@color/gray_light"
                android:layout_marginLeft="@dimen/spacing_larger_72" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:layout_marginBottom="@dimen/spacing_small_8">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_email_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/spacing_medial_24"
                    android:layout_marginRight="@dimen/spacing_normal_16">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/email_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/et.hint.email"
                            android:text="@string/et.text.email"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_light"
                            android:enabled="false"
                            android:focusable="false"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_tiny_2"
                android:background="@color/gray_light"
                android:layout_marginLeft="@dimen/spacing_larger_72" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:layout_marginBottom="@dimen/spacing_small_8">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_toys_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/spacing_medial_24"
                    android:layout_marginRight="@dimen/spacing_normal_16">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/account_vk_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/et.hint.vk"
                            android:text="@string/et.text.vk"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_light"
                            android:enabled="false"
                            android:focusable="false"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_tiny_2"
                android:background="@color/gray_light"
                android:layout_marginLeft="@dimen/spacing_larger_72" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:layout_marginBottom="@dimen/spacing_small_8">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_android_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/spacing_medial_24"
                    android:layout_marginRight="@dimen/spacing_normal_16">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/github_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/et.hint.github"
                            android:text="@string/et.text.github"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_light"
                            android:enabled="false"
                            android:focusable="false"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_tiny_2"
                android:background="@color/gray_light"
                android:layout_marginLeft="@dimen/spacing_larger_72" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:layout_marginBottom="@dimen/spacing_small_8">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_account_box_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/spacing_medial_24"
                    android:layout_marginRight="@dimen/spacing_normal_16">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/about_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:hint="@string/et.hint.about"
                            android:text="@string/et.text.about"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_light"
                            android:enabled="false"
                            android:focusable="false"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_create_black_24dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right"
        android:layout_marginRight="@dimen/fab_margin_right"/>

</android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawble_header"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>